<!--
Copyright 2021 Jejoon Ryu

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">jejoon-MedBook</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for med edittext inputs -->
    <string name="med_name_label">Medicine name</string>
    <string name="dose_amount_label">Dose amount</string>
    <string name="dose_unit_label">Dose unit</string>
    <string name="start_date_label">Enter start date</string>
    <string name="daily_freq_label">Daily Frequency</string>

    <!-- Strings used for button lobles -->
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>

    <!-- Strings used for fragments for navigation -->
    <string name="medbook_label">MedBook</string>
    <string name="med_action_add_label">Add Medicine</string>
    <string name="med_action_edit_label">Edit Medicine</string>

    <!-- Error msgs -->
    <string name="null_error_msg">required</string>
    <string name="date_parse_error_msg">yyyy-mm-dd</string>
</resources>